<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RandomActivity">

    <TextView
        android:id="@+id/tv_rnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/tv_adet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adet"
        app:layout_constraintBottom_toBottomOf="@+id/inpt_adet"
        app:layout_constraintEnd_toStartOf="@+id/inpt_adet"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inpt_adet"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/tv_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max"
        app:layout_constraintBottom_toBottomOf="@+id/inpt_max"
        app:layout_constraintEnd_toStartOf="@+id/inpt_max"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inpt_max"
        app:layout_constraintVertical_bias="0.517" />

    <TextView
        android:id="@+id/tv_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:layout_constraintBottom_toBottomOf="@+id/inpt_min"
        app:layout_constraintEnd_toStartOf="@+id/inpt_min"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inpt_min"
        app:layout_constraintVertical_bias="0.517"
        tools:ignore="VisualLintOverlap" />

    <EditText
        android:id="@+id/inpt_adet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sıfır"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rnd"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/inpt_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sıfır"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/inpt_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpt_adet"
        app:layout_constraintVertical_bias="0.507" />

    <EditText
        android:id="@+id/inpt_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sıfır"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        tools:ignore="MissingConstraints,VisualLintOverlap" />

    <ScrollView
        android:id="@+id/scrolview"
        android:layout_width="376dp"
        android:layout_height="300dp"
        android:layout_marginTop="412dp"
        android:contentDescription="@string/scrol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/hedef_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/btn_crt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oluştur"
        app:layout_constraintBottom_toTopOf="@+id/scrolview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpt_min"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>