<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmsActivity">

    <TextView
        android:id="@+id/tv_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/tv_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel"
        app:layout_constraintBottom_toBottomOf="@+id/inpt_tel"
        app:layout_constraintEnd_toStartOf="@+id/inpt_tel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inpt_tel" />

    <TextView
        android:id="@+id/tv_msj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mesaj"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gönder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/inpt_tel"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/tel"
        android:inputType="phone"
        android:maxLength="11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sms"
        app:layout_constraintVertical_bias="0.101"
        tools:ignore="LabelFor,MissingConstraints,DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="253dp"
        android:layout_height="210dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/inpt_tel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inpt_tel"
        app:layout_constraintTop_toBottomOf="@+id/inpt_tel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inpt_msj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/mesaj"
            android:textColorHighlight="#985D5D"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>